k8s/app/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: uw-alerts

spec:
  replicas: 1

  selector:
    matchLabels:
      app: api

  template:
    metadata:
      labels:
        app: api

    spec:
      containers:
        - name: api
          image: registry.digitalocean.com/uwalerts/uw-alerts-api:8002f8a
          imagePullPolicy: IfNotPresent

          ports:
            - name: http
              containerPort: 8000

          startupProbe:
            httpGet:
              path: /health
              port: 8000
            periodSeconds: 5
            failureThreshold: 30

          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            periodSeconds: 10
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            periodSeconds: 20
            failureThreshold: 5

          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 768Mi

---
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: uw-alerts

spec:
  type: ClusterIP

  selector:
    app: api

  ports:
    - name: http
      port: 8000
      targetPort: 8000
