k8s/app/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: uw-alerts

spec:
  replicas: 1

  selector:
    matchLabels:
      app: frontend

  template:
    metadata:
      labels:
        app: frontend

    spec:
      containers:
        - name: frontend
          image: registry.digitalocean.com/uwalerts/uw-alerts-frontend:9975538
          imagePullPolicy: IfNotPresent

          ports:
            - name: http
              containerPort: 3000

          startupProbe:
            httpGet:
              path: /
              port: 3000
            periodSeconds: 5
            failureThreshold: 30

          readinessProbe:
            httpGet:
              path: /
              port: 3000
            periodSeconds: 10
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /
              port: 3000
            periodSeconds: 20
            failureThreshold: 5

          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 300m
              memory: 512Mi

---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: uw-alerts

spec:
  type: ClusterIP

  selector:
    app: frontend

  ports:
    - name: http
      port: 3000
      targetPort: 3000
